# scri.be

./: .editorconfig  .env.dev  .gitignore  .gitmodules  .i18n-check.yaml  .licenserc.yaml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  PRIVACY.txt  README.md  SECURITY.md  STYLEGUIDE.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  tailwind.config.js  update_i18n_keys.sh  vite.config.js
.github/: COC_CONTACT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_improvement.yml  feature_request.yml  localization.yml  question.yml
.github/workflows/: ci_frontend_static_analysis.yaml  ci_i18n.yaml  ci_spdx_license_header_check.yaml  pr_ci_frontend.yaml  pr_ci_i18n.yaml  pr_maintainer_checklist.yaml
frontend/: app.vue  error.vue  eslint.config.mjs  head.ts  locales.ts  modules.ts  nuxt.config.ts  package-lock.json  package.json  reset_local_env.sh  tailwind.config.ts  tsconfig.json
frontend/app/: error.vue  spa-loading-template.html
frontend/composables/: useBase64Decoder.ts  useCurrentPath.ts  useMarkdown.ts
frontend/i18n/: bn.json  en-US.json  hi.json  ml.json  ne.json  ta.json  te.json
frontend/layouts/: Docs.vue
frontend/pages/: index.vue
frontend/types/: docs-entry.ts  i18n-map.ts  icon-map.ts  location.ts
frontend/utils/: imageURLRegistry.s.ts
layouts/: Default.vue
src/: App.vue  main.js  main.ts  style.css
src/components/: ThemeToggle.vue
src/composables/: useTheme.js  useTheme.ts
(+171 files in other folders)
