[project]
name = "scri.be"
version = "1.0.0"
description = "Scribe's community portal scri.be"
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
dev = [
    # Keep docs dependencies formatted in this way with ruff to allow for upgrades via VS Code extension.
    "i18n-check>=1.19.2",
    "prek>=0.3.10",
]

[project.urls]
Homepage = "https://github.com/scribe-org/scri.be"
